--- a/templates/base.html
+++ b/templates/base.html
@@ -7,22 +7,21 @@
   <title>{% block title %}{% endblock %} - RoleplayBot</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">RoleplayBot</a>
+  <a class="navbar-brand" href="{{ base_url }}/">RoleplayBot</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse w-100 order-1 order-lg-0">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/{{ roleplay.id }}">Home</a>
+        <a class="nav-link" href="{{ base_url }}/{{ roleplay.id }}">Home</a>
       </li>
       {% if roleplay %}
         <li class="nav-item active">
-          <a class="nav-link" href="/{{ roleplay.id }}/commands">Commands</a>
+          <a class="nav-link" href="{{ base_url }}/{{ roleplay.id }}/commands">Commands</a>
         </li>
       {% endif %}
       {% if roleplay.characters %}
@@ -32,7 +31,7 @@
           </a>
           <div class="dropdown-menu">
             {% for character in roleplay.characters %}
-              <a class="dropdown-item" href="/{{ roleplay.id }}/character/{{ character.user_id }}/{{ character.id }}">{{ character.name }}</a>
+              <a class="dropdown-item" href="{{ base_url }}/{{ roleplay.id }}/character/{{ character.user_id }}/{{ character.id }}">{{ character.name }}</a>
             {% endfor %}
           </div>
         </li>
@@ -49,7 +48,7 @@
             </button>
             <div class="dropdown-menu">
               {% for rp in roleplays %}
-                <a class="dropdown-item" href="/{{ rp.id }}">{{ rp.name }}</a>
+                <a class="dropdown-item" href="{{ base_url }}/{{ rp.id }}">{{ rp.name }}</a>
               {% endfor %}
             </div>
           </div>
