--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,10 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{{ base_url }}/">RoleplayBot</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse w-100 order-1 order-lg-0">
+  <div class="collapse navbar-collapse w-100 order-1 order-lg-0" id="main-navbar">
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="{{ base_url }}/{{ roleplay.id }}">Home</a>
@@ -37,10 +37,8 @@
         </li>
       {% endif %}
     </ul>
-  </div>
-  <div class="collapse navbar-collapse w-100 order-3">
     <ul class="navbar-nav ml-auto">
-      {% if roleplays %}
+{#      {% if roleplays %}#}
         <li class="nav-item">
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">
@@ -53,7 +51,7 @@
             </div>
           </div>
         </li>
-      {% endif %}
+{#      {% endif %}#}
     </ul>
   </div>
 </nav>
@@ -63,5 +61,7 @@
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+{% block scripts %}
+{% endblock %}
 </body>
 </html>
