--- a/templates/character.html
+++ b/templates/character.html
@@ -8,37 +8,64 @@
     {% if character.status %}
       <p class="lead">{{ character.status }}</p>
     {% endif %}
-    {% if character.avatar %}<img src="{{ character.avatar }}" class="rounded float-right" style="max-width: 25%" alt="Avatar" />{% endif %}
-    <p><strong>Age:</strong> {% if character.age %}{{ character.age }}{% else %}<em>Unknown</em>{% endif %}</p>
-    <p><strong>Appearance:</strong> <span style="white-space: pre-line;">{% if character.appearance %}{{ character.appearance }}{% else %}<em>Unknown</em>{% endif %}</span></p>
-    <p><strong>Action Points:</strong> <span class="badge bg-dark text-light">{{ character.actions }}</span></p>
+    {% if character.avatar %}
+      <img src="{{ character.avatar }}" class="rounded float-right"
+           style="max-width: 25%" alt="Avatar"/>{% endif %}
+    <p><strong>Age:</strong> {% if character.age %}{{ character.age }}{% else %}
+      <em>Unknown</em>{% endif %}</p>
+    <p><strong>Appearance:</strong> <span
+        style="white-space: pre-line;">{% if character.appearance %}
+      {{ character.appearance }}{% else %}<em>Unknown</em>{% endif %}</span></p>
+    <p><strong>Move Timer:</strong> <span id="move-timer">0:00</span></p>
+    <p><strong>Action Points:</strong> <span
+        class="badge bg-dark text-light">{{ character.actions }}</span></p>
     <p><strong>Abilities:</strong></p>
     <ul>
-      <li>Force: <span class="badge bg-dark text-light">{{ character.abilities.force }}</span></li>
-      <li>Presence: <span class="badge bg-dark text-light">{{ character.abilities.presence }}</span></li>
-      <li>Guts: <span class="badge bg-dark text-light">{{ character.abilities.guts }}</span></li>
-      <li>Wits: <span class="badge bg-dark text-light">{{ character.abilities.wits }}</span></li>
-      <li>Sensation: <span class="badge bg-dark text-light">{{ character.abilities.sensation }}</span></li>
-      <li>Reflection: <span class="badge bg-dark text-light">{{ character.abilities.reflection }}</span></li>
+      <li>Force: <span
+          class="badge bg-dark text-light">{{ character.abilities.force }}</span>
+      </li>
+      <li>Presence: <span
+          class="badge bg-dark text-light">{{ character.abilities.presence }}</span>
+      </li>
+      <li>Guts: <span
+          class="badge bg-dark text-light">{{ character.abilities.guts }}</span>
+      </li>
+      <li>Wits: <span
+          class="badge bg-dark text-light">{{ character.abilities.wits }}</span>
+      </li>
+      <li>Sensation: <span
+          class="badge bg-dark text-light">{{ character.abilities.sensation }}</span>
+      </li>
+      <li>Reflection: <span
+          class="badge bg-dark text-light">{{ character.abilities.reflection }}</span>
+      </li>
     </ul>
-    <p><strong>Inventory:</strong> <a class="btn btn-secondary" data-toggle="collapse" href="#inventory" role="button" aria-expanded="false" aria-controls="inventory">Spoiler</a></p>
+    <p><strong>Inventory:</strong> <a class="btn btn-secondary"
+                                      data-toggle="collapse" href="#inventory"
+                                      role="button" aria-expanded="false"
+                                      aria-controls="inventory">Spoiler</a></p>
     <div class="collapse" id="inventory">
       <div class="card card-body">
         {% if character.inventory %}
           <ul>
-            {% for item in character.inventory %}<li>{{ item }}</li>{% endfor %}
+            {% for item in character.inventory %}
+              <li>{{ item }}</li>{% endfor %}
           </ul>
         {% else %}
           <p><em>No items in inventory.</em></p>
         {% endif %}
       </div>
     </div>
-    <p><strong>Prisms:</strong> <a class="btn btn-secondary" data-toggle="collapse" href="#prisms" role="button" aria-expanded="false" aria-controls="prisms">Spoiler</a></p>
+    <p><strong>Prisms:</strong> <a class="btn btn-secondary"
+                                   data-toggle="collapse" href="#prisms"
+                                   role="button" aria-expanded="false"
+                                   aria-controls="prisms">Spoiler</a></p>
     <div class="collapse" id="prisms">
       <div class="card card-body">
         {% if character.prisms %}
           <ul>
-            {% for prism in character.prisms %}<li>{{ prism }}</li>{% endfor %}
+            {% for prism in character.prisms %}
+              <li>{{ prism }}</li>{% endfor %}
           </ul>
         {% else %}
           <p><em>No prisms owned.</em></p>
@@ -48,4 +75,40 @@
   {% else %}
     <p>Invalid character.</p>
   {% endif %}
+{% endblock %}
+
+{% block scripts %}
+  <script type="text/javascript">
+      function pad(n) {
+          return ("00" + n).slice(-2);
+      }
+
+      $(document).ready(function () {
+          const moveCountdownTimeStr = "{{ character.move_countdown_time }}"
+          if (!moveCountdownTimeStr) {
+              return;
+          }
+          const moveCountdownTime = new Date(moveCountdownTimeStr).getTime();
+          const moveTimer = $("#move-timer");
+
+          const countdownCallback = function () {
+              const now = new Date().getTime();
+              let remaining = moveCountdownTime - now;
+              if (remaining > 0) {
+                  const milliseconds = remaining % 1000;
+                  remaining = (remaining - milliseconds) / 1000;
+                  const seconds = remaining % 60;
+                  remaining = (remaining - seconds) / 60;
+                  const minutes = remaining;
+                  moveTimer.text(`${minutes}:${pad(seconds)}`);
+              } else {
+                  clearInterval(interval);
+                  moveTimer.text("0:00");
+              }
+          }
+
+          const interval = setInterval(countdownCallback, 1000);
+          countdownCallback();
+      })
+  </script>
 {% endblock %}
